--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -3,4 +3,4 @@
     android:id="@+id/img"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#800000"/>
+    android:background="@color/colorPrimaryDark"/>
