--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -25,9 +25,9 @@
         app:floatingSearch_searchBarMarginLeft="@dimen/margin_4"
         app:floatingSearch_searchBarMarginTop="@dimen/margin_4"
         app:floatingSearch_searchBarMarginRight="@dimen/margin_4"
-        app:floatingSearch_searchHint="Search..."
+        app:floatingSearch_searchHint="@string/search_hint"
         app:floatingSearch_suggestionsListAnimDuration="250"
-        app:floatingSearch_showSearchKey="false"
+        app:floatingSearch_showSearchKey="true"
         app:floatingSearch_leftActionMode="noLeftAction"
         app:floatingSearch_close_search_on_keyboard_dismiss="true" />
 
